Lektion Två ( beige)

--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="menu">
       <h2>MENU</h2>
-      <div class="Products">
+      <div class="Products"></div>
         <h2>PRODUCTS</h2>
-      </div>
+      
       <div class="Technologies"></div>
       <h2>TECHNOLOGIES</h2>
 
