--- a/html/index.html
+++ b/html/index.html
@@ -8,27 +8,40 @@
   </head>
   <body>
     <div class="menu">
-      <h2>MENU</h2>
-      <div class="Products"></div>
-        <h2>PRODUCTS</h2>
+      <div class = "menu-text">
+      <p>MENU</p>
+    </div>
+      <div class="Products">
+        <p>PRODUCTS</p>
+      </div>
       
-      <div class="Technologies"></div>
-      <h2>TECHNOLOGIES</h2>
+      <div class="Technologies">
+      <p>TECHNOLOGIES</p>
+    </div>
 
-      <div class="Industrial"></div>
-      <h2>INDUSTRIAL APPLICATIONS</h2>
+      <div class="Industrial">
+      <p>INDUSTRIAL APPLICATIONS</p>
+      </div>
 
       <div class="support">
-        <h2>SUPPORT</h2>
+        <p>SUPPORT</p>
       </div>
       <div class="Press">
-        <h2>PRESS</h2>
+        <p>PRESS</p>
       </div>
 
-      <div class="Reviews"><h2>REVIEWS</h2></div>
+      <div class="Reviews"><p>REVIEWS</p></div>
       <div class="Where-To">
-        <h2>WHERE TO BUY</h2>
+        <p>WHERE TO BUY</p>
       </div>
+    </div>
+
+
+    <div class = "main">
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quos modi odio, nobis aut nam possimus cupiditate, fuga in soluta alias suscipit ullam animi assumenda eaque magni temporibus doloribus delectus?</p>
+
+
     </div>
   </body>
 </html>
