--- a/html/index.html
+++ b/html/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <div class="menu">
-      <div class = "menu-text">
-      <p>MENU</p>
-    </div>
+      <div class = "menu-pic">
+      <img src="../images/menu_32dp_1F1F1F_FILL0_wght400_GRAD0_opsz40 (4).png"></img>
+
+      </div>
+    <!-- </div>
       <div class="Products">
         <p>PRODUCTS</p>
       </div>
@@ -31,11 +33,11 @@
       </div>
 
       <div class="Reviews"><p>REVIEWS</p></div>
-      <div class="Where-To">
-        <p>WHERE TO BUY</p>
-      </div>
+      <div class="Where-To"> -->
+        <!-- <p>WHERE TO BUY</p>
+      </div> -->
     </div>
-
+    </div>
 
     <div class = "main">
 
