--- a/html/index.html
+++ b/html/index.html
@@ -7,37 +7,22 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <div class="menu">
+    <nav>
+    <ul class="menu">
       <div class = "menu-pic">
       <img src="../images/menu_32dp_1F1F1F_FILL0_wght400_GRAD0_opsz40 (4).png"></img>
 
       </div>
-    <!-- </div>
-      <div class="Products">
-        <p>PRODUCTS</p>
-      </div>
-      
-      <div class="Technologies">
-      <p>TECHNOLOGIES</p>
-    </div>
 
-      <div class="Industrial">
-      <p>INDUSTRIAL APPLICATIONS</p>
-      </div>
-
-      <div class="support">
-        <p>SUPPORT</p>
-      </div>
-      <div class="Press">
-        <p>PRESS</p>
-      </div>
-
-      <div class="Reviews"><p>REVIEWS</p></div>
-      <div class="Where-To"> -->
-        <!-- <p>WHERE TO BUY</p>
-      </div> -->
-    </div>
-    </div>
+      <li class="menu-item"><a class="menu-link" href="Products.html">Products</a></li>
+      <li class="menu-item"></li><a class="menu-link" href="">Technologies</a></li>
+      <li class="menu-item"></li><a  class="menu-link" href="">Industrial Applications</a></li>
+      <li class="menu-item"></li><a  class="menu-link"href="">Support</a></li>
+      <li class="menu-item"></li><a class="menu-link" href="">Press</a></li>
+      <li class="menu-item"></li><a  class="menu-link"href="">Reviews</a></li>
+      <li class="menu-item"></li><a class="menu-link" href="">Where to buy</a></li>
+    </ul>
+  </nav>
 
     <div class = "main">
 
