--- a/html/index.html
+++ b/html/index.html
@@ -55,19 +55,19 @@
 </div>
 </div>
 
-    <div class = "nya-fläkt">
+    <div class = "reafläkt">
    
     <div class="bild1">
-    <img src="/images/Noctua-Fläkt-bakrund (1).webp" alt="Flakt-bild1">
+    <img src="/images/shopping.webp" alt="Flakt-bild1">
   </div>
     <div class="heltnyafläkt">
   <!-- <p> Helt nya fläkten!</p> -->
     </div>
-  <div class="nyhetfläkt">
-  <p>NYHET</p>
+  <div class="rea">
+  <p>REA</p>
   </div>
-<div class="bildbeskrivning">
-<p>Denna fläkt är jättecool och snygg och vi vill att du köper den snälla snälla snälla snälla.. Du kan få en puss. Denna fläkt kan operera i din klocka och i din dator, den kommer ändra ditt liv. Jag måste försörja min familj köp. Min unge Rajeesh får ingen mat annars.</p>
+<div class="bildbeskrivningrea">
+<p class="bildbeskrivningrea">Denna fläkt är jättecool och snygg och vi vill att du köper den snälla snälla snälla snälla.. Du kan få en puss. Denna fläkt kan operera i din klocka och i din dator, den kommer ändra ditt liv. Jag måste försörja min familj köp. Min unge Rajeesh får ingen mat annars.</p>
 </div>
 </div>
 
