--- a/html/Products.html
+++ b/html/Products.html
@@ -1,14 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
-
-    EYEAGHHGVBADGBAISH iosabOGBUAOgb
-    
-</body>
+    <link rel="stylesheet" href="/css/Products.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="reafläkt">
+        <div class="bild1">
+          <img src="/images/flakt2 (2).webp" alt="Flakt-bild1" />
+        </div>
+        <div class="heltnyafläkt">
+          <!-- <p> Helt nya fläkten!</p> -->
+        </div>
+        <div class="rea">
+          <p>REA</p>
+        </div>
+        <div class="bildbeskrivningrea">
+          <p>Noctua NF-F12 PWM</p>
+          <div class="pris">
+            <p>7145kr</p>
+          </div>
+        </div>
+      </div>
+      <div class="reafläkt">
+        <div class="bild2">
+          <img src="/images/flakt3 (2).webp" alt="Flakt-bild1" />
+        </div>
+        <div class="heltnyafläkt">
+          <!-- <p> Helt nya fläkten!</p> -->
+        </div>
+        <div class="rea">
+          <p>REA</p>
+        </div>
+        <div class="bildbeskrivningrea">
+          <p>Noctua NF-F12 PWM</p>
+          <div class="pris">
+            <p>300kr</p>
+          </div>
+        </div>
+      </div>
+      <div class="reafläkt">
+        <div class="bild1">
+          <img src="/images/flakt5 (1).webp" alt="Flakt-bild1" />
+        </div>
+        <div class="heltnyafläkt">
+          <!-- <p> Helt nya fläkten!</p> -->
+        </div>
+        <div class="rea">
+          <p>REA</p>
+        </div>
+        <div class="bildbeskrivningrea">
+          <p>Noctua NF-F12 PWM</p>
+          <div class="pris">
+            <p>400kr</p>
+          </div>
+        </div>
+      </div>
+      <div class="reafläkt">
+        <div class="bild1">
+          <img src="/images/Flakt1 (1).webp" alt="Flakt-bild1" />
+        </div>
+        <div class="heltnyafläkt">
+          <!-- <p> Helt nya fläkten!</p> -->
+        </div>
+        <div class="rea">
+          <p>REA</p>
+        </div>
+        <div class="bildbeskrivningrea">
+          <p>Noctua NF-F12 PWM</p>
+          <div class="pris">
+            <p>100kr</p>
+          </div>
+        </div>
+      </div>
+      <div class="reafläkt">
+        <div class="bild1">
+          <img src="/images/shopping.webp" alt="Flakt-bild1" />
+        </div>
+        <div class="heltnyafläkt">
+          <!-- <p> Helt nya fläkten!</p> -->
+        </div>
+        <div class="rea">
+          <p>REA</p>
+        </div>
+        <div class="bildbeskrivningrea">
+          <p>Noctua NF-F12 PWM</p>
+          <div class="pris">
+            <p>300Kr</p>
+          </div>
+        </div>
+      </div>
+      <div class="reafläkt">
+        <div class="bild1">
+          <img src="/images/flakt4 (1).webp" alt="Flakt-bild1" />
+        </div>
+        <div class="heltnyafläkt">
+          <!-- <p> Helt nya fläkten!</p> -->
+        </div>
+        <div class="rea">
+          <p>REA</p>
+        </div>
+        <div class="bildbeskrivningrea">
+          <p>Noctua NF-F12 PWM</p>
+          <div class="pris">
+            <p>250kr</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
