--- a/html/index.html
+++ b/html/index.html
@@ -10,15 +10,12 @@
     <nav>
     <ul class="menu">
       <div class = "menupic">
-      <img src="../images/menu_32dp_1F1F1F_FILL0_wght400_GRAD0_opsz40 (4).png"></img>
-
-      </div>
+       
+        <img src="../images/menu_32dp_1F1F1F_FILL0_wght400_GRAD0_opsz40 (4).png"></img>
+           </div>
 
       <li class="menu-item"><a class="menu-link" href="Products.html">Products</a></li>
-      <li class="menu-item"></li><a class="menu-link" href="">Technologies</a></li>
-      <li class="menu-item"></li><a  class="menu-link" href="">Industrial Applications</a></li>
       <li class="menu-item"></li><a  class="menu-link"href="">Support</a></li>
-      <li class="menu-item"></li><a class="menu-link" href="">Press</a></li>
       <li class="menu-item"></li><a  class="menu-link"href="">Reviews</a></li>
       <li class="menu-item"></li><a class="menu-link" href="">Where to buy</a></li>
     </ul>
@@ -67,7 +64,10 @@
   <p>REA</p>
   </div>
 <div class="bildbeskrivningrea">
-<p class="bildbeskrivningrea">Denna fläkt är jättecool och snygg och vi vill att du köper den snälla snälla snälla snälla.. Du kan få en puss. Denna fläkt kan operera i din klocka och i din dator, den kommer ändra ditt liv. Jag måste försörja min familj köp. Min unge Rajeesh får ingen mat annars.</p>
+<p>Noctua NF-F12 PWM</p>
+ <div class="pris">
+  <p>300kr</p>
+  </div>
 </div>
 </div>
 
@@ -82,8 +82,9 @@
   <div class="nyhetfläkt">
   <p>NYHET</p>
   </div>
+  
 <div class="bildbeskrivning">
-<p>Denna fläkt är jättecool och snygg och vi vill att du köper den snälla snälla snälla snälla.. Du kan få en puss. Denna fläkt kan operera i din klocka och i din dator, den kommer ändra ditt liv. Jag måste försörja min familj köp. Min unge Rajeesh får ingen mat annars.</p>
+<p>Denna fläkt är  och snygg och vi vill att du köper den snälla snälla snälla snälla.. Du kan få en puss. Denna fläkt kan operera i din klocka och i din dator, den kommer ändra ditt liv. Jag måste försörja min familj köp. Min unge Rajeesh får ingen mat annars. </p>
 </div>
 </div>
 
