--- a/html/index.html
+++ b/html/index.html
@@ -15,9 +15,9 @@
            </div>
 
       <li class="menu-item"><a class="menu-link" href="Products.html">Products</a></li>
-      <li class="menu-item"></li><a  class="menu-link"href="">Support</a></li>
-      <li class="menu-item"></li><a  class="menu-link"href="">Reviews</a></li>
-      <li class="menu-item"></li><a class="menu-link" href="">Where to buy</a></li>
+      <li class="menu-item"><a class="menu-link" href="Reviews.html">Reviews</a></li>
+      <li class="menu-item"></li><a  class="menu-link"href="Reviews.html">Reviews</a></li>
+      <li class="menu-item"></li><a class="menu-link" href="Wheretobuy.html">Where to buy</a></li>
     </ul>
   </nav>
 
