--- a/html/Products.html
+++ b/html/Products.html
@@ -16,12 +16,12 @@
  
 
           <div class="stat">
-          <p class = "max">Max RPM</p>
-          <p class = "air">Airflow</p>
-          <p class = "static">Static Pressure</p>
-          <p class = "noise">Noise Level</p>
-          <p class = "power">Power Consumption</p>
-          <p class = "life">Lifespan</p>
+          <p class = "max">Max RPM:</p>
+          <p class = "air">Airflow:</p>
+          <p class = "static">Static Pressure:</p>
+          <p class = "noise">Noise Level:</p>
+          <p class = "power">Power Consumption:</p>
+          <p class = "life">Lifespan:</p>
     
          
           <p class = "rpm">2000 RPM</p>
