--- a/html/Products.html
+++ b/html/Products.html
@@ -40,7 +40,7 @@
           <p>REA</p>
         </div>
         <div class="bildbeskrivningrea">
-          <p>Noctua NF-F12 PWM</p>
+          <p>Noctua NF-F18 </p>
           <div class="pris">
             <p>7145kr</p>
           </div>
@@ -57,7 +57,7 @@
           <p>REA</p>
         </div>
         <div class="bildbeskrivningrea">
-          <p>Noctua NF-F12 PWM</p>
+          <p>Noctua NF-F13 </p>
           <div class="pris">
             <p>300kr</p>
           </div>
@@ -91,7 +91,7 @@
           <p>NYHET</p>
         </div>
         <div class="bildbeskrivningrea">
-          <p>Noctua NF-F12 PWM</p>
+          <p>Noctua NF-F11 </p>
           <div class="pris">
             <p>400kr</p>
           </div>
@@ -126,7 +126,7 @@
           <p>REA</p>
         </div>
         <div class="bildbeskrivningrea">
-          <p>Noctua NF-F12 PWM</p>
+          <p>Noctua NF-F12 </p>
           <div class="pris">
             <p>100kr</p>
           </div>
@@ -161,7 +161,7 @@
           <p>REA</p>
         </div>
         <div class="bildbeskrivningrea">
-          <p>Noctua NF-F12 PWM</p>
+          <p>Noctua NF-F19 </p>
           <div class="pris">
             <p>300Kr</p>
           </div>
@@ -196,7 +196,7 @@
           <p>NYHET</p>
         </div>
         <div class="bildbeskrivningrea">
-          <p>Noctua NF-F12 PWM</p>
+          <p>Noctua NF-F10 </p>
           <div class="pris">
             <p>250kr</p>
           </div>
