--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <div class="wrapper">
     <nav>
     <ul class="menu">
       <div class = "menupic">
@@ -87,7 +88,8 @@
 <p>Denna fläkt är  och snygg och vi vill att du köper den snälla snälla snälla snälla.. Du kan få en puss. Denna fläkt kan operera i din klocka och i din dator, den kommer ändra ditt liv. Jag måste försörja min familj köp. Min unge Rajeesh får ingen mat annars. </p>
 </div>
 </div>
-
+</div>
     <script src="../Java/Java.js"></script>
+    
   </body>
 </html>
