--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
   <p>REA</p>
   </div>
 <div class="bildbeskrivningrea">
-<p>Noctua NF-F12 PWM</p>
+<p>Noctua NF-F12 </p>
  <div class="pris">
   <p>300kr</p>
   </div>
