--- a/html/Products.html
+++ b/html/Products.html
@@ -125,11 +125,13 @@
         <div class="rea">
           <p>REA</p>
         </div>
+        <section id="test">
         <div class="bildbeskrivningrea">
           <p>Noctua NF-F12 </p>
           <div class="pris">
             <p>100kr</p>
           </div>
+          </section>
           
         </div>
             <div class="stat">
