--- a/html/index.html
+++ b/html/index.html
@@ -69,6 +69,11 @@
  <div class="pris">
   <p>300kr</p>
   </div>
+
+  <div class="beskrivning">
+<p>Varför inte köpa? den är så fin ju. Du kan få mycket</p>
+
+  </div>
 </div>
 
 </div>
