--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <div class="wrapper">
-    <nav>
+   <div class="wrapper">
+    
+
+      <div class="menu-div">
     <ul class="menu">
       <div class = "menupic">
        
@@ -20,10 +22,14 @@
       <li class="menu-item"></li><a  class="menu-link"href="Reviews.html">Reviews</a></li>
       <li class="menu-item"></li><a class="menu-link" href="Wheretobuy.html">Where to buy</a></li>
     </ul>
-  </nav>
+    </div>
+ 
+
+   
+  
 
 
-
+ 
 <div class = "om-oss">
 
 
