--- a/html/Reviews.html
+++ b/html/Reviews.html
@@ -67,11 +67,11 @@
         </div>
         <div class="review">
 
-            <p>⭐⭐⭐⭐☆</p>
+            <p>⭐⭐⭐⭐⭐</p>
           </div>
             <div class="overview">
 
-                <p>Får mig så glad när den låter brrrrrr - Linus Tech Tips</p>
+                <p>Jag tappade min dator från 5:e våningen men noctuafläktens luftutdrag fick datorn att sväva tillbaka upp.- Linus Tech Tips</p>
             </div>
               <div class="bild3">
 
@@ -88,11 +88,11 @@
         </div>
         <div class="review">
 
-            <p>⭐⭐⭐⭐☆</p>
+            <p>⭐⭐⭐⭐⭐</p>
           </div>
             <div class="overview">
 
-                <p>Får mig så glad när den låter brrrrrr - Linus Tech Tips</p>
+                <p>Min dator sprängdes, snälla köp inte det kan vara farligt. - Linus Tech Tips</p>
             </div>
               <div class="bild1">
 
