--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -54,7 +55,7 @@
 
   <div class = "vdbeskrivning">
     <div class="pappa-text">
-<p>Här har vi mig VD pappa till Rajeesh.</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In eaque nam, magnam dolore autem natus saepe. Tenetur repellat ducimus sint obcaecati. At aspernatur corporis necessitatibus. Facilis sit quam accusantium assumenda.</p>
 </div>
 </div>
 </div>
@@ -79,7 +80,7 @@
  
 </div>
  <div class="beskrivning">
-<p>Varför inte köpa? den är så fin ju. Du kan få mycket</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat perferendis nisi vero iusto obcaecati exercitationem deleniti quasi ipsa eos quam. Quos veritatis praesentium eos maxime adipisci, sapiente debitis voluptatum itaque.</p>
 
   </div>
 </div>
@@ -95,11 +96,22 @@
   
   
 <div class="bildbeskrivning">
-<p>Denna fläkt är  och snygg och vi vill att du köper den snälla snälla snälla snälla.. Du kan få en puss. Denna fläkt kan operera i din klocka och i din dator, den kommer ändra ditt liv. Jag måste försörja min familj köp. Min unge Rajeesh får ingen mat annars. </p>
+<p>  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum repudiandae nobis voluptatibus nostrum, aliquam officia! Odit magnam obcaecati architecto consequatur doloribus modi sapiente aliquam ab placeat suscipit? Cumque, veniam mollitia. </p>
 </div>
 </div>
 
+<div class ="utdelning">
 
+  <h4>Varför Oss? </h4>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quidem magnam nesciunt atque fuga, voluptatibus saepe natus reiciendis sint veniam odit similique ea corrupti magni debitis ipsam asperiores. Nemo, dignissimos.</p>
+</div>
+
+
+<div class="footer">
+
+ NoctuaAB - Rotosub @copyright.com, Contact: @NoctuaAB@findus.com, 2025
+</div >
 
 
 </div>
