--- a/html/index.html
+++ b/html/index.html
@@ -100,6 +100,13 @@
 </div>
 </div>
 
+<div class="plats">
+<h3>Här finns vi!</h3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8661656.59188368!2d5.444889115759963!3d57.993553746198266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c66f2873d38edb%3A0x39ecdb6d5f967f23!2sNoctua%3B%20Open%20Source%20Intelligence!5e0!3m2!1ssv!2sse!4v1748090722500!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+</div>
+
+
 <div class ="varför-oss">
 
   <h4>Varför Oss? </h4>
