--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
 <div class = "menupic">
        
-        <img src="../images/BildförMeny.png"></img>
+        <img src="../images/menu_40dp_1F1F1F_FILL0_wght400_GRAD0_opsz40.png"></img>
            </div>
       <div class="menu-div">
     <ul>
