--- a/html/Products.html
+++ b/html/Products.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="wrapper">
-        <div class="home"><a class="home" href="index.html"><img src="/images/home_40dp_1F1F1F_FILL0_wght400_GRAD0_opsz40.png" alt=""></a></div>
+        <div class="home"><a class="home" href="index.html"><img src="/images/home_40dp_1F1F1F_FILL0_wght400_GRAD0_opsz40.png" alt="Hem, tar dig till hemmenyn"></a></div>
       <div class="flakt1">
         <div class="bild1">
-          <img src="/images/flakt2 (2).webp" alt="Flakt-bild1" />
+          <img src="/images/flakt2 (2).webp" alt="Bild på fläkt" />
         </div>
  
 
@@ -48,7 +48,7 @@
       </div>
       <div class="flakt1">
         <div class="bild1">
-          <img src="/images/flakt3 (2).webp" alt="Flakt-bild1" />
+          <img src="/images/flakt3 (2).webp" alt="Andra bild på fläkt" />
         </div>
         <div class="heltnyafläkt">
           <!-- <p> Helt nya fläkten!</p> -->
@@ -83,7 +83,7 @@
       </div>
       <div class="flakt1">
         <div class="bild1">
-          <img src="/images/flakt5 (1).webp" alt="Flakt-bild1" />
+          <img src="/images/flakt5 (1).webp" alt="Tredje bild på fläkt" />
         </div>
         <div class="heltnyafläkt">
           <!-- <p> Helt nya fläkten!</p> -->
@@ -118,7 +118,7 @@
       </div>
       <div class="flakt1">
         <div class="bild1">
-          <img src="/images/Flakt1 (1).webp" alt="Flakt-bild1" />
+          <img src="/images/Flakt1 (1).webp" alt="Fjärde bild på fläkt" />
         </div>
         <div class="heltnyafläkt">
           <!-- <p> Helt nya fläkten!</p> -->
@@ -155,7 +155,7 @@
       </div>
       <div class="flakt1">
         <div class="bild1">
-          <img src="/images/shopping.webp" alt="Flakt-bild1" />
+          <img src="/images/shopping.webp" alt="Bild på dyrare fläkt" />
         </div>
         <div class="heltnyafläkt">
           <!-- <p> Helt nya fläkten!</p> -->
@@ -190,7 +190,7 @@
       </div>
       <div class="flakt1">
         <div class="bild1">
-          <img src="/images/flakt4 (1).webp" alt="Flakt-bild1" />
+          <img src="/images/flakt4 (1).webp" alt="Stor fläkt" />
         </div>
         <div class="heltnyafläkt">
           <!-- <p> Helt nya fläkten!</p> -->
