--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
 <div class = "menupic">
        
-        <img src="../images/menu_40dp_1F1F1F_FILL0_wght400_GRAD0_opsz40.png"></img>
+        <img src="../images/menu_40dp_1F1F1F_FILL0_wght400_GRAD0_opsz40.png" alt="Bild på meny"> </img>
            </div>
       <div class="menu-div">
     <ul>
@@ -19,8 +19,8 @@
 
       <li class="menu-item"><a class="menu-link" href="Products.html">Products</a></li>
       <li class="menu-item"><a class="menu-link" href="Reviews.html">Reviews</a></li>
-      <li class="menu-item"></li><a  class="menu-link"href="Reviews.html">Reviews</a></li>
-      <li class="menu-item"></li><a class="menu-link" href="Wheretobuy.html">Where to buy</a></li>
+      <li class="menu-item"></li><a  class="menu-link"href="">Reviews</a></li>
+      <li class="menu-item"></li><a class="menu-link" href="">Where to buy</a></li>
     </ul>
     </div>
 
@@ -38,7 +38,7 @@
 
 
   <div class="noctua-logo">
-<img src="/images/noctua-logo (1).webp" alt="">
+<img src="/images/noctua-logo (1).webp" alt="Loggan för Noctua">
 </div>
 
 
@@ -51,7 +51,7 @@
     <div class = "vd">
    
     <div class="vd-bild">
-    <img src="/images/VD-mobilbild.webp" alt="VD-bild">
+    <img src="/images/VD-mobilbild.webp" alt="VD-bild, bild på VD">
   </div>
    
   
@@ -66,7 +66,7 @@
     <div class = "reafläkt">
 
     <div class="bild1">
-    <img src="/images/shopping.webp" alt="Flakt-bild1">
+    <img src="/images/shopping.webp" alt="Första bild på fläkt">
   </div>
     <div class="heltnyafläkt">
   <!-- <p> Helt nya fläkten!</p> -->
@@ -91,7 +91,7 @@
     <div class = "nya-fläkt">
    
     <div class="bild1">
-    <img src="/images/Noctua-Fläkt-bakrund (1).webp" alt="Flakt-bild1">
+    <img src="/images/Noctua-Fläkt-bakrund (1).webp" alt="Andra bilden på fläkten">
   </div>
     <div class="heltnyafläkt">
   <!-- <p> Helt nya fläkten!</p> -->
