--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
 
       <li class="menu-item"><a class="menu-link" href="Products.html">Products</a></li>
       <li class="menu-item"><a class="menu-link" href="Reviews.html">Reviews</a></li>
-      <li class="menu-item"></li><a  class="menu-link"href="">Reviews</a></li>
+      <li class="menu-item"></li><a  class="menu-link"href="Reviews.html">Reviews</a></li>
       <li class="menu-item"></li><a class="menu-link" href="">Where to buy</a></li>
     </ul>
     </div>
